# alarm-clock-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
packaging/systemd/: alarm-clock.service
packaging/windows/: install_service.ps1
src/alarm_clock/: __init__.py  __main__.py  audio.py  cli.py  compat_winsound.py  config.py  logging_conf.py  models.py  scheduler.py  service.py  storage.py  timezone.py  tui.py
tests/integration/: test_end_to_end.py
tests/unit/: test_audio.py  test_audio_extra.py  test_cli.py  test_cli_extra.py  test_config.py  test_init.py  test_logging.py  test_models.py  test_scheduler.py  test_scheduler_extra.py  test_service.py  test_service_extra.py  test_storage.py  test_storage_extra.py  test_timezone.py
