[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm-clock"
version = "1.0.0"
description = "Production-ready terminal alarm clock with persistence, TUI, and system service support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alarm Clock Contributors"}
]
keywords = ["alarm", "clock", "cli", "terminal", "tui", "reminder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "loguru>=0.7",
    "tomli>=2.0; python_version<'3.11'",
    "tomli_w>=1.0",
    "tzdata>=2023; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "freezegun>=1.2",
    "pyinstaller>=6.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "freezegun>=1.2",
]

[project.scripts]
alarm-clock = "alarm_clock.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/alarm-clock"
Repository = "https://github.com/yourusername/alarm-clock"
Issues = "https://github.com/yourusername/alarm-clock/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alarm_clock*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "T20"]
ignore = ["S101", "S311", "B008"]
fixable = ["F", "I", "W", "UP", "B", "C4", "SIM", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=alarm_clock --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/alarm_clock"]
omit = [
    "tests/*",
    "*/__main__.py",
    "*/tui.py",
    "*/compat_winsound.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]